[0.3.0]

-- notif feature : created natures are all used
-- notif_sms_free feature : create a nature to be used

[0.2.1]

-- roll feature : only 1 call to prepare cmd out/err
-- job feature : option to notif on error

[0.2.0]

-- add job feature
-- add state feature
-- add prop_file feature
-- add notif feature
-- add engine cfg, init, prepenv parts

[0.1.1]

-- add this ChangeLog
-- fix SOAF_RET inside replacement fn

[0.1.0]

-- first version